[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes_and_scripts/Enemies/Tank/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes_and_scripts/Enemies/Tank/Rocket_launcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes_and_scripts/Enemies/Tank/Tank_single_machine_gun.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes_and_scripts/Enemies/Tank/Tank-T5.gd" type="Script" id=6]
[ext_resource path="res://Scenes_and_scripts/Enemies/Tank/Tank_double_machine_gun.tscn" type="PackedScene" id=7]

[node name="Tank-T5" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Tank_single_machine_gun" parent="." index="1" instance=ExtResource( 5 )]
position = Vector2( -37, -44 )
speed = 10.0
anticlockwise = true
max_rotation = 90.0
shoot_delay = 0.25

[node name="Tank_single_machine_gun2" parent="." index="2" instance=ExtResource( 5 )]
position = Vector2( 37, -44 )
speed = 10.0
max_rotation = 90.0
shoot_delay = 0.25

[node name="Tank_single_machine_gun3" parent="." index="3" instance=ExtResource( 5 )]
position = Vector2( 37, 47 )
rotation = 3.14159
speed = 10.0
anticlockwise = true
max_rotation = 90.0
shoot_delay = 0.25

[node name="Tank_single_machine_gun4" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( -37, 47 )
rotation = 3.14159
speed = 10.0
max_rotation = 90.0
shoot_delay = 0.25

[node name="Rocket_launcher" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( 0, 45 )
launch_delay = 5.0

[node name="Tank_double_machine_gun" parent="." index="6" instance=ExtResource( 7 )]
shoot_delay = 0.2
